@@ -203,7 +203,7 @@ computer.  The system should boot up, and you should be presented with
 the <prompt>boot:</prompt> prompt.  Here you can enter optional boot
 arguments, or just hit &enterkey;.
 
-</para><para>
+</para><para condition="supports-floppy-boot">
 
 In case your computer doesn't support booting from USB memory devices,
 you can still use a single floppy to do the initial boot and then
@@ -215,7 +215,7 @@ When it asks for the root floppy, simply press &enterkey;. You should see
 </para>
   </sect2>
 
-  <sect2 arch="i386" id="floppy-boot">
+  <sect2 arch="i386" condition="supports-floppy-boot" id="floppy-boot">
   <title>Booting from Floppies</title>
 <para>
 
