@@ -195,7 +195,7 @@ you should try
   </sect2>
 
 
-  <sect2 arch="powerpc">
+  <sect2 arch="powerpc" condition="supports-floppy-boot">
   <title>Booting from Floppies</title>
 <para>
 
