@@ -20,6 +20,10 @@ installation-guide (2006XXXX) UNRELEASED; urgency=low
   * Delete some obsolete entities.
   * Change references from package d-i-manual to package installation-guide.
 
+  [ Colin Watson ]
+  * Add a few more supports-floppy-boot conditionals to make it easier to
+    turn all this off in rebuilds of the manual.
+
  -- Frans Pop <fjp@debian.org>  Wed,  4 Jan 2006 23:03:45 +0100
 
 installation-guide (20060102) unstable; urgency=low
